# dotfiles

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  Cargo.toml  LICENSE  README.md  configuration.nix  devenv.nix  fix-bootloader.md  flake.nix  home-manager.md  home.nix  install.sh  lib.nix  nvfetcher.toml  recover.sh  repl.nix  shell.nix  toggle-speaker.sh  weeb.txt  zfs.sh
.tack/: default.nix  pins.lock.json  pins.toml
_sources/: generated.json  generated.nix
gitconfig/: .gitconfig
home-manager/: default.nix  hardware.nix  id_ed25519.pub  id_rsa.pub  impermanence.nix  options-TEMPORARY.nix
home-manager/gui/: 3dprinting.nix  arduino.nix  bambu.nix  brave.nix  deadbeef.nix  default.nix  discord.nix  dunst.nix  firefox.nix  ghostty.nix  gtk.nix  helix.nix  kitty.nix  librewolf.nix  lobster.nix  mpv.nix  music-player.nix  nemo.nix  obs-studio.nix  pathofbuilding.nix  plasma.nix  pqiv.nix  qt.nix  rio.nix  rofi-pdf-menu.sh  rofi.nix  vlc.nix  vscode.nix  wallust.nix  waybar.nix  weeb.nix  wm.nix  zathura.nix  zed-editor.nix  zellij.nix  zoom.nix
home-manager/hyprland/: default.nix  hypr_monitors.py  hyprnstack.nix  idle.nix  ipc.py  keybinds.nix  lock.nix  picture_in_picture.py  plugins.nix  screenshot.nix  screenshot.sh  startup.nix  swww.nix  wallpaper.nix  waybar.nix
home-manager/niri/: default.nix
home-manager/programs/: brave.nix  deadbeef.nix  default.nix  dunst.nix  filezilla.nix  firefox.nix  gaming.nix  ghostty.nix  gtk.nix  helix.nix  imv.nix  kitty.nix  mpv.nix  nemo.nix  obs-studio.nix  pathofbuilding.nix  pqiv.nix  rofi-book-search.sh  rofi-iynaix.rasi  rofi-pdf-menu.sh  rofi-power-menu.sh  rofi-powermenu.sh  rofi-wifi-menu.sh  rofi.nix  shaders_high.txt  smplayer.nix  use-nix-paths.patch  vlc.nix  vscode.nix  wallust.nix  waybar.nix  weeb.nix  wezterm.nix  yt-dlp.nix  zathura.nix  zed-editor.nix
home-manager/shell/: bash.nix  bat.nix  btop.nix  cava.nix  default.nix  direnv.nix  eza.nix  fish.nix  git.nix  helix.nix  jujutsu.nix  lf.nix  music-player.nix  neovim.nix  nix.nix  nixos_hollow.txt  ranger.nix  rice.nix  ripgrep.nix  rust.nix  shell.nix  starship.nix  tmux.nix  tuido.nix  typescript.nix  yazi.nix  yt-dlp.nix  zoxide.nix  zsh.nix
hosts/: bspwm.nix  configuration.nix  default.nix  gnome.nix  hm.nix  home-manager.nix  home.nix  nixos.nix  secrets.json  secrets.json.bak  secrets.yaml  zfs.nix
hosts/desktop/: configuration.nix  default.nix  hardware-configuration.nix  hardware.nix  home.nix
hosts/desktop-generic/: default.nix  hardware.nix  home.nix
hosts/framework/: default.nix  hardware.nix  home.nix
hosts/iso/: default.nix  home.nix
hosts/laptop/: default.nix  hardware.nix  home.nix
hosts/optiplex/: default.nix  hardware.nix  home.nix
hosts/t450/: default.nix  hardware.nix  home.nix
hosts/t520/: default.nix  hardware.nix  home.nix
hosts/vm/: configuration.nix  default.nix  hardware-configuration.nix  hardware.nix  home.nix
hosts/vm-amd/: default.nix  hardware.nix  home.nix
hosts/vm-hyprland/: default.nix  hardware.nix  home.nix
hosts/vm-zfs/: default.nix
hosts/x1c/: default.nix  hardware.nix  home.nix
hosts/xps/: default.nix  hardware.nix  home.nix  nixos-hardware.nix
modules/: auth.nix  bat.nix  boot.nix  configuration.nix  constants.nix  default.nix  devshell.nix  docker.nix  flake-parts.nix  fonts.nix  hardware.nix  hjem.nix  hyprland.nix  id_rsa.pub  impermanence.nix  installation.nix  lib.nix  nixpkgs_patches.nix  overlays.nix  patches.nix  programs.nix  shortcuts.nix  sops.nix  specialisations.nix  terminal.nix  testing.nix  tmpfs.nix  users.nix  vm.nix  zfs.nix
modules/alacritty/: alacritty.yml
modules/bash/: .bashrc  .profile
modules/bspwm/: bspwm_start  sxhkdrc
modules/desktop/: .Xresources  bspwm.nix  dunst.nix  (+10 more)
modules/gui/dotfiles-rs/: Cargo.toml  _unwrapped.nix  default.nix  wrapped.nix
modules/gui/dotfiles-rs/common/: Cargo.toml
modules/gui/dotfiles-rs/common/src/: niri.rs  nixjson.rs  rofi.rs  wallpaper.rs
modules/gui/dotfiles-rs/dotfiles/: Cargo.toml
modules/gui/dotfiles-rs/dotfiles/src/: cli.rs  lib.rs  monitors.rs
modules/gui/dotfiles-rs/wallpaper/: Cargo.toml  build.rs
modules/gui/dotfiles-rs/wallpaper/src/: backup.rs  cli.rs  crop.rs  dedupe.rs  lib.rs  main.rs  pqiv.rs  search.rs  wallfacer.rs
nixos/: am5.nix  audio.nix  auth.nix  bluetooth.nix  boot.nix  configuration.nix  default.nix  docker.nix  filezilla.nix  fish.nix  gaming.nix  gh.nix  gnome3.nix  hdds.nix  hyprland.nix  impermanence.nix  kanata.nix  keyd.nix  keyring.nix  kmonad.nix  mango.nix  mpv-mod.patch  nemo.nix  niri.nix  nix.nix  nvidia.nix  overlays.nix  plasma.nix  qmk.nix  repl-overlays.nix  shell.nix  sonarr.nix  sops.nix  specialisations.nix  syncoid.nix  tlp.nix  tmpfs.nix  transmission.nix  tty.nix  users.nix  (+7 more)
overlays/: default.nix  fastfetch-nixos-old-small.patch  generated.json  generated.nix  hyprland-undo-redundant-ticks.patch  imv-fix-repeated-keypresses.patch  lib.nix  neofetch-nixos-small.patch  nvfetcher.toml  tokyonight-style.patch  transmission.nix  waybar.nix
pkgs/: vv.nix
ranger/: .shortcutrc
spacemacs/: .spacemacs
templates/: default.nix
tmux/: .tmux.conf
(+448 files in other folders)
