[workspace]
resolver = "2"
members = ["common", "dotfiles", "wallpaper"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "string"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
common = { path = "common" }
csv = "1.4.0"
dirs = "6.0.0"
execute = "0.2.15"
fast_image_resize = { version = "6.0.0", features = ["image", "rayon"] }
fastrand = "2.3.0"
hex = "0.4.3"
hyprland = "0.4.0-beta.3"
image = "0.25.10"
itertools = "0.14.0"
niri-ipc = { git = "https://github.com/niri-wm/niri.git" }
rayon = "1.12.0"
regex = "1.12.3"
rexiv2 = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = "deny"
option_if_let_else = { level = "allow", priority = 1 }
unwrap_used = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }

# faster image operations in dev
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.release]
strip = true
lto = true
