[package]
name = "common"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
csv.workspace = true
dirs.workspace = true
execute.workspace = true
fast_image_resize.workspace = true
fastrand.workspace = true
hyprland.workspace = true
image.workspace = true
itertools.workspace = true
niri-ipc.workspace = true
rayon = "1.11.0"
regex.workspace = true
rexiv2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
