[package]
name = "dotfiles"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
common.workspace = true
dirs.workspace = true
execute.workspace = true
fastrand.workspace = true
hyprland.workspace = true
itertools.workspace = true
niri-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
wallust_themes = "1.1.0"

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen = "0.2.33"
