[package]
name = "wallpaper"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common = { workspace = true }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "string"] }
clap_complete = { version = "4.5.65", features = ["unstable-dynamic"] }
csv = "1.4.0"
dirs = "6.0.0"
execute = "0.2.15"
fastrand = "2.3.0"
fast_image_resize = { version = "6.0.0", features = ["image", "rayon"] }
hyprland = "0.4.0-beta.3"
niri-ipc = "25.11.0"
image = "0.25.9"
itertools = "0.14.0"
rexiv2 = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
whoami = "2.0.2"
regex = "1.12.2"

[build-dependencies]
clap = { version = "4.5.54", features = ["derive", "string"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
serde = { version = "1.0.228", features = ["derive"] }
