[package]
name = "wallpaper"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
common.workspace = true
csv.workspace = true
dirs.workspace = true
execute.workspace = true
fast_image_resize.workspace = true
fastrand.workspace = true
hyprland.workspace = true
image.workspace = true
itertools.workspace = true
niri-ipc.workspace = true
regex.workspace = true
rexiv2.workspace = true
serde.workspace = true
rayon = "1.11.0"
sha2 = "0.10.9"
toml = "1.0.7"
whoami = "2.1.1"

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen = "0.2.33"
serde.workspace = true
